# staking-baskets

./: .gitignore  LICENSE  README.md  flake.nix
docs/: README.txt  compile.sh
docs/doc/: basket-bot.md  staking_basket_spec.md
docs/docker/: Dockerfile  compile.sh
nix/: globals.nix  onchain.nix  utils.nix
onchain/: .ghcid  Makefile  atma.cabal
onchain/app/: Main.hs
onchain/src/Atma/: PTypes.hs  Types.hs  Utils.hs
onchain/src/Atma/Scripts/: BasketTokenMP.hs  BasketValidator.hs  Common.hs  OneShotMintingPolicy.hs  StakePoolTokenMP.hs  StakeValidator.hs  UnspendableValidator.hs
onchain/src/Atma/Scripts/BasketValidator/: DepositWithdraw.hs  Donate.hs  Rebalance.hs  SetAdmin.hs  SwitchLock.hs  UpdateExRate.hs
onchain/src/Atma/Utils/: ExRate.hs  QuickCheck.hs  Value.hs
onchain/test/: Config.hs  Spec.hs
onchain/test/Suites/Atma/: Common.hs  Config.hs  Tests.hs  Utils.hs
onchain/test/Suites/Atma/Common/: BasketContext.hs  PSM.hs  Utils.hs
onchain/test/Suites/Atma/Deposit/: Tests.hs  Transactions.hs
onchain/test/Suites/Atma/Donate/: Tests.hs  Transactions.hs
onchain/test/Suites/Atma/Initialize/: Tests.hs
onchain/test/Suites/Atma/OneShotMintingPolicy/: Tests.hs  Transactions.hs
onchain/test/Suites/Atma/Rebalancing/: Tests.hs  Transactions.hs
onchain/test/Suites/Atma/Serialization/: PConstantDecl.hs
onchain/test/Suites/Atma/SetAdmin/: Tests.hs  Transactions.hs
onchain/test/Suites/Atma/SwitchLock/: Tests.hs  Transactions.hs
onchain/test/Suites/Atma/UpdateExRate/: Tests.hs  Transactions.hs
onchain/test/Suites/Atma/Utils/: ExRate.hs
onchain/test/Suites/Atma/Withdraw/: Tests.hs  Transactions.hs
